--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,11 @@
 .container {
     background-color: var(--color1);
     height: 100vh;
+    overflow-x: none;
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 5vh;
     color: var(--color3);
     font-size: 1.6rem;
@@ -25,6 +26,8 @@
 }
 
 .ul {
+    margin: 0;
+    padding: 0;
     list-style: none;
     text-align: center;
     font-weight: 800;
@@ -32,25 +35,29 @@
 }
 
 .box_buttons > button {
-    margin: 0 5rem;
-    padding: 1rem 2rem;
+    margin: 0 4rem;
+    padding: 1.2rem 3rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: .35rem;
     border: none;
     border-radius: 5rem;
     background-color: var(--color3);
     color: #fff;
 }
 
-.box_buttons > button:hover {
-    box-shadow: inset 0 0 .2rem .2rem #fff;
-}
-
 .box_buttons > button:nth-child(1) {
     background-color: var(--color1);
 }
 
+.box_buttons > button:hover {
+    box-shadow: inset 0 0 .2rem .2rem #fff;
+}
+
 .footer {
+    width: 100%;
     position: absolute;
-    bottom: 0;
+    bottom: .2rem;
     margin-left: 50%;
     transform: translateX(-50%);
     text-align: center;
