--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,3 +24,20 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#nprogress .bar {
+  background: #007FFF;
+  position: fixed;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 2px;
+}
+
+@media (max-width:768px) {
+  html {
+    font-size: 50%;
+  }
+}
