--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,19 +1,12 @@
 .container {
     background-color: var(--color-background);
-    height: 100vh;
+    height: 90vh;
     overflow-x: none;
     color: #fff;
-}
-
-.header {
-    width: 100%;
-    height: 5vh;
-    background-color: var(--color-aside);
-    font-size: 1.6rem;
+    width: 100vw;
 }
 
 .main {
-    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,15 +52,12 @@
     animation-delay: 4s;
 }
 
-
 .box_buttons > button {
     margin: 0 4rem;
     padding: 1.2rem 3rem;
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: .35rem;
-    border: none;
-    border-radius: 5rem;
     background-color: var(--color-2);
     color: #fff;
     cursor: pointer;
@@ -86,16 +76,6 @@
     box-shadow: inset 0 0 .2rem .2rem #fff;
 }
 
-.footer {
-    width: 100%;
-    height: 5vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6rem;
-    background-color: var(--color-aside);
-}
-
 @keyframes textCool {
     0% {
         opacity: 0;
@@ -108,5 +88,16 @@
     50% {
         opacity: 0;
     }
+}
 
+@media (max-width:76.8rem) {
+    .h1 {
+        font-size: 6rem;
+    }
+}
+
+@media (max-width: 37.5rem) {
+    .box_buttons > button {
+        margin: 0 1rem;
+    }
 }
