--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,13 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: 5rem;
+    
+}
+
 * {
   box-sizing: border-box;
 }
