--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,5 +2,20 @@
     width: 100%;
     height: 5vh;
     background-color: var(--color-aside);
+    color: #fff;
     font-size: 1.6rem;
+}
+
+.nav {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 2rem;
+}
+
+.btn {
+    background-color: rgba(141, 61, 61, 0.836);
+    color: #fff;
+    padding: .3rem 1rem;
 }
