--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -14,11 +14,25 @@
     grid-row: 1;
 }
 
+.aside_box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+}
+
+.aside_box > button {
+    margin: 1.5rem 10%;
+    padding: .4rem .2rem;
+}
+
 .main {
-    background-color: blue;
+    color: #fff;
+    background: linear-gradient(180deg, #020024 0%, #090979 25%, #00d4ff 110%);
     grid-column: 3/15;
     grid-row: 1;
 }
+
+
 
 @media (max-width:76.8rem) {
     .aside {
